<resources>
    <string name="app_name">Metar Fetcher</string>
    <string name="settings_DefaultICAO">KDFW</string>
    <string name="Current_ICAO">Default station</string>
    <string name="settings_ICAO_key">ICAO_key</string>
    <string name="useDefault_key">useDefault_key</string>
    <string name="DefaultOnLoadCheckbox">Enter Default on load</string>
    <string name="check_station_id_length">check length of Station ID</string>
    <string name="check_network_connectivity">Check Network Connectivity</string>
    <string name="fetching">Fetching </string>
    <string name="no_data">no weather data to display</string>
    <string name="metar">Metar</string>
    <string name="station_id">station id</string>
    <string name="fetch_metar">Fetch METAR</string>
    <string name="plain_english">Plain English</string>
    <string name="fetch_Default">Fetch Default</string>
    <string name="tempScale_key">tempScale_key</string>
    <string name="Celsius">Celsius</string>
</resources>
