<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/settings_DefaultICAO"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_ICAO_key"
        android:maxLength="4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/Current_ICAO" />


    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/useDefault_key"
        android:title="@string/DefaultOnLoadCheckbox"></CheckBoxPreference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/tempScale_key"
        android:title="@string/Celsius"></CheckBoxPreference>


</PreferenceScreen>